--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<groupId>com.mechyam</groupId>
 	<artifactId>mechyam-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<properties>
 		<java.version>17</java.version>
