--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ jwt.temp.expiration=600000
 #spring.datasource.url=jdbc:mysql://root:utXlmfehHmTEAJRmkOQUyrEwQbHWLCou@mainline.proxy.rlwy.net:53405/railway
 #spring.datasource.username=root
 #spring.datasource.password=utXlmfehHmTEAJRmkOQUyrEwQbHWLCou
-spring.datasource.url=jdbc:mysql://localhost:3306/mechyamdb
-spring.datasource.username=mechyamuser
-spring.datasource.password=mechyam@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://root:GBgOWqxBXzsKAohFnUsbgXXIzgTxAZvv@yamanote.proxy.rlwy.net:51164/railway
+spring.datasource.username=root
+spring.datasource.password=GBgOWqxBXzsKAohFnUsbgXXIzgTxAZvv
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -70,8 +70,8 @@ server.tomcat.max-http-form-post-size=50MB
 # ================================
 # Redis for OTP
 # ================================
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 
 app.otp.length=6
 app.otp.expiry-minutes=10
