--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.servlet.context-path=/mechyam
-server.port=8080
+#server.port=8080
 
 # ================================
 # JWT Configuration
@@ -70,7 +70,7 @@ server.tomcat.max-http-form-post-size=50MB
 # ================================
 # Redis for OTP
 # ================================
-spring.data.redis.host=localhost
+spring.data.redis.host=redis.railway.internal
 spring.data.redis.port=6379
 
 app.otp.length=6
