--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,6 +73,9 @@ server.tomcat.max-http-form-post-size=50MB
 spring.data.redis.host=redis.railway.internal
 spring.data.redis.port=6379
 
+spring.data.redis.password=qPJsrqzdPDGftHGJKTlpzHyRbGkqODAb
+spring.data.redis.username=default
+
 app.otp.length=6
 app.otp.expiry-minutes=10
 
