changed username nd Pswd railways1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,8 +73,8 @@ server.tomcat.max-http-form-post-size=50MB
 spring.data.redis.host=redis.railway.internal
 spring.data.redis.port=6379
 
-spring.data.redis.password=qPJsrqzdPDGftHGJKTlpzHyRbGkqODAb
-spring.data.redis.username=default
+#spring.data.redis.password=qPJsrqzdPDGftHGJKTlpzHyRbGkqODAb
+#spring.data.redis.username=default
 
 app.otp.length=6
 app.otp.expiry-minutes=10
