changed username nd Pswd railways2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,6 +72,7 @@ server.tomcat.max-http-form-post-size=50MB
 # ================================
 spring.data.redis.host=redis.railway.internal
 spring.data.redis.port=6379
+spring.data.redis.ssl.enabled=true
 
 #spring.data.redis.password=qPJsrqzdPDGftHGJKTlpzHyRbGkqODAb
 #spring.data.redis.username=default
