--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,10 +72,11 @@ server.tomcat.max-http-form-post-size=50MB
 # ================================
 spring.data.redis.host=redis.railway.internal
 spring.data.redis.port=6379
-spring.data.redis.ssl.enabled=true
 
-#spring.data.redis.password=qPJsrqzdPDGftHGJKTlpzHyRbGkqODAb
-#spring.data.redis.username=default
+
+spring.data.redis.password=qPJsrqzdPDGftHGJKTlpzHyRbGkqODAb
+spring.data.redis.username=default
+spring.data.redis.ssl.enabled=true
 
 app.otp.length=6
 app.otp.expiry-minutes=10
