remove redis from properties file and OTPService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,13 +70,13 @@ server.tomcat.max-http-form-post-size=50MB
 # ================================
 # Redis for OTP
 # ================================
-spring.data.redis.host=redis.railway.internal
-spring.data.redis.port=6379
+#spring.data.redis.host=redis.railway.internal
+#spring.data.redis.port=6379
 
 
-spring.data.redis.password=qPJsrqzdPDGftHGJKTlpzHyRbGkqODAb
-spring.data.redis.username=default
-spring.data.redis.ssl.enabled=true
+#spring.data.redis.password=qPJsrqzdPDGftHGJKTlpzHyRbGkqODAb
+#spring.data.redis.username=default
+#spring.data.redis.ssl.enabled=true
 
 app.otp.length=6
 app.otp.expiry-minutes=10
